emoji_window/emoji_window.h


    __declspec(dllexport) HWND __stdcall create_window(const char* title, int x, int y, int width, int height);

    __declspec(dllexport) void __stdcall destroy_window(HWND hwnd);


    // ========== TabControl 功能 ==========

    // 创建 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 添加 Tab 页
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 可选，若为 NULL 则自动创建
    );


    // 切换到指定 Tab
    __declspec(dllexport) BOOL __stdcall SelectTab(
        HWND hTabControl,
        int index
    );


    // 获取 Tab 数量
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );


    // 销毁 TabControl（清理资源）
    __declspec(dllexport) void __stdcall DestroyTabControl(
        HWND hTabControl
    );


    // 获取整个 TabControl 的启用状态（1=启用, 0=禁用, -1=无效句柄）
    __declspec(dllexport) int __stdcall GetTabEnabled(
        HWND hTab
    );


    // 判断指定标签页是否为当前选中（1=选中, 0=未选中, -1=错误）
    __declspec(dllexport) int __stdcall IsTabItemSelected(
        HWND hTab,
        int index
    );